# rust-pdfium

./: Cargo.toml  readme.md  test.txt
src/: main.rs
