[package]
name = "rust-pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.7", features = ["multipart"]}
bytes = "1.8.0"
image = "0.25.5"
pdfium-render = "0.8.25"
regex = "1.11.1"
serde = "1.0.214"
tempfile = "3.13.0"
tokio =  { version = "1.41.0", features = ["rt-multi-thread"]}
tokio-util = "0.7.12"
